change library name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = tkdialog
+name = tkdialog-wrapper
 version = attr: src.tkdialog.__version__
 description = A wrapper library to use tkinter dialogs easily.
 long_description = file: README.md
