--- a/setup.cfg
+++ b/setup.cfg
@@ -8,12 +8,13 @@ url = https://github.com/KosukeMizuno/tkdialog
 license = MIT
 classifiers =
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
 
 [options]
 package_dir=
     =src
 packages=find:
+python_requires = >=3.5
 
 [options.packages.find]
 where=src
